# ebdamame

./: .gitignore  .pre-commit-config.yaml  README.md  domain-specific-terms.txt  main.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg  tox.ini
.github/workflows/: coverage.yml  formatting.yml  packaging.yml  python-publish.yml  pythonlint.yml  unittests.yml
dev_requirements/: requirements-formatting.txt  requirements-linting.txt  requirements-packaging.txt  requirements-tests.txt  requirements-type_check.txt
src/: _ebddocx2table_version.py
src/ebdamame/: __init__.py  _docx_utils.py  docxtableconverter.py  version.py
src/ebddocx2table/: __init__.py  docxtableconverter.py
unittests/: __init__.py  examples.py  test_highlevel.py  test_myclass.py
unittests/__snapshots__/: test_highlevel.ambr
unittests/test_data/: README.md
