[project]
name = "ebdamame"
description = "A scraper to library to scrape .docx files with 'Entscheidungsbaumdiagramm' tables into a truely machine readable structure"
license = { text = "GPL" }
requires-python = ">=3.11"
authors = [{ name = "Hochfrequenz Unternehmensberatung GmbH", email = "info@hochfrequenz.de" }]
keywords = ["EBD", "Energiewirtschaft", "Marktkommunikation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "rebdhuhn>=0.22.0",
    "python-docx>=1.1.2",
    "more_itertools>=10.5.0",
    "pydantic>=2.0",
    "click>=8.1.8"
    # add all the dependencies from requirements.in here, too
]
dynamic = ["readme", "version"]

[project.urls]
Changelog = "https://github.com/Hochfrequenz/ebdamame/releases"
Homepage = "https://github.com/Hochfrequenz/ebdamame"

[tool.black]
line-length = 120
target_version = ["py311", "py312", "py313", "py314"]

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120

[mypy]
truethy-bool = true

[tool.mypy]
disable_error_code = []

[dependency-groups]
tests = [
    "pytest==9.1.1",
    "pytest-subtests==0.15.0",
    "syrupy==5.5.3"
]
coverage = [
    {include-group = "tests"},
    "coverage==7.15.2"
]
formatting = [
    "black==26.5.1",
    "isort==8.0.1"
]
linting = [
    "pylint==4.0.6"
]
spell_check = [
    "codespell==2.4.3"
]
type_check = [
    {include-group = "tests"},
    "mypy==2.3.0"
]
dev = [
    {include-group = "tests"},
    {include-group = "linting"},
    {include-group = "type_check"},
    {include-group = "coverage"},
    {include-group = "formatting"},
    "pre-commit"
]

[tool.uv]
default-groups = []

[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ebdamame/version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.sdist]
exclude = ["/unittests"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = ["snapshot: mark a test as a snapshot test"]
